forked from https://github.com/gitbitex/gitbitex-spot

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Go template
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+*.iml
+*.xml
+*。sum
 
 # Test binary, built with `go test -c`
 *.test
@@ -12,4 +17,14 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+algo
+/lastupdate.tmp
+/routers/commentsRouter_controllers.go
+/swagger/
+
+data/
+data/*
+
+.idea
+.idea/*
